Fixed issue 22: ExternalResourceFactoryTest fails with an error if not connected to Internet - Actually this is "intended UIMA behavior" - maybe a issue should be opened with UIMA - Added warnings in JavaDoc - Use local file in test case